--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Dasmoto's Arts & Crafts</title>
-    <link href="./resources/style.css" type="text/css" rel="stylesheet">
+    <link href="https://github.com/melforbes/Dasmotos/blob/master/style.css">
   </head>
   <body>
     <div class="dasmoto">
